# multics

./: .gitignore  pyproject.toml
multics/data/: __init__.py  data_preprop.ipynb  loader.py
tests/: test_multics.py
