[tool.poetry]
name = "multics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^0.25.3"
dtwalign = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^1.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
